Bug 110578 - [CI][BAT] igt@runner@aborted - fail - WARN_ON(!intel_dig_port->tc_legacy_port && intel_uncore_read(&(dev_priv)->uncore, (((const i915_reg_t){ .reg = (0xc4000) }))) & (1 << ((tc_port) + 24)))
Summary: [CI][BAT] igt@runner@aborted - fail - WARN_ON(!intel_dig_port->tc_legacy_port...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-02 06:54 UTC by Martin Peres
Modified: 2019-05-06 10:20 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: display/Other


Attachments

Description Martin Peres 2019-05-02 06:54:23 UTC
<4>[   11.278247] ------------[ cut here ]------------
<4>[   11.278249] WARN_ON(!intel_dig_port->tc_legacy_port && intel_uncore_read(&(dev_priv)->uncore, (((const i915_reg_t){ .reg = (0xc4000) }))) & (1 << ((tc_port) + 24)))
<4>[   11.278291] WARNING: CPU: 7 PID: 367 at drivers/gpu/drm/i915/intel_dp.c:5234 intel_digital_port_connected+0x5e4/0x710 [i915]
<4>[   11.278292] Modules linked in: i915(+) mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel e1000e(+) snd_hda_intel snd_hda_codec snd_hwdep snd_hda_core ptp pps_core cdc_ether usbnet mii i2c_i801 snd_pcm mei_me mei prime_numbers btusb btrtl btbcm btintel bluetooth ecdh_generic
<4>[   11.278308] CPU: 7 PID: 367 Comm: systemd-udevd Not tainted 5.1.0-rc7-CI-CI_DRM_6024+ #1
<4>[   11.278309] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP TLC, BIOS ICLSFWR1.R00.3121.A00.1903190527 03/19/2019
<4>[   11.278339] RIP: 0010:intel_digital_port_connected+0x5e4/0x710 [i915]
<4>[   11.278340] Code: 42 8d 14 ed 05 00 00 00 0f a3 d0 73 35 b8 01 00 00 00 e9 ed fa ff ff 48 c7 c6 f0 29 41 a0 48 c7 c7 26 ba 42 a0 e8 bc c1 d3 e0 <0f> 0b 41 89 ed 41 80 8c 24 54 13 00 00 01 bd 01 00 00 00 e9 26 fe
<4>[   11.278342] RSP: 0018:ffffc9000033f9e8 EFLAGS: 00010286
<4>[   11.278343] RAX: 0000000000000000 RBX: ffff88848a890000 RCX: 0000000000000007
<4>[   11.278345] RDX: 0000000000000006 RSI: ffff8884936348b8 RDI: ffffffff82120421
<4>[   11.278346] RBP: 0000000000000000 R08: 0000000004dfabf4 R09: 0000000000000000
<4>[   11.278347] R10: 0000000000000000 R11: 0000000000000000 R12: ffff88848a880008
<4>[   11.278348] R13: 0000000000000000 R14: ffff88848a890d20 R15: 0000000000000001
<4>[   11.278350] FS:  00007fba9c106680(0000) GS:ffff88849ffc0000(0000) knlGS:0000000000000000
<4>[   11.278351] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4>[   11.278352] CR2: 00007f13588a5024 CR3: 0000000493488002 CR4: 0000000000760ee0
<4>[   11.278353] PKRU: 55555554
<4>[   11.278354] Call Trace:
<4>[   11.278395]  intel_modeset_init+0x10cc/0x19c0 [i915]
<4>[   11.278399]  ? _raw_spin_unlock_irqrestore+0x39/0x60
<4>[   11.278432]  ? intel_setup_gmbus+0x22b/0x2e0 [i915]
<4>[   11.278466]  i915_driver_load+0xd9d/0x18a0 [i915]
<4>[   11.278471]  ? __pm_runtime_resume+0x4f/0x80
<4>[   11.278473]  ? _raw_spin_unlock_irqrestore+0x4c/0x60
<4>[   11.278475]  ? _raw_spin_unlock_irqrestore+0x4c/0x60
<4>[   11.278478]  ? lockdep_hardirqs_on+0xe3/0x1b0
<4>[   11.278517]  i915_pci_probe+0x29/0xa0 [i915]
<4>[   11.278521]  pci_device_probe+0xa1/0x120
<4>[   11.278525]  really_probe+0xf3/0x3e0
<4>[   11.278529]  driver_probe_device+0x10a/0x120
<4>[   11.278532]  device_driver_attach+0x4b/0x50
<4>[   11.278535]  __driver_attach+0x97/0x130
<4>[   11.278537]  ? device_driver_attach+0x50/0x50
<4>[   11.278539]  bus_for_each_dev+0x74/0xc0
<4>[   11.278543]  bus_add_driver+0x13f/0x210
<4>[   11.278545]  ? 0xffffffffa07fe000
<4>[   11.278548]  driver_register+0x56/0xe0
<4>[   11.278549]  ? 0xffffffffa07fe000
<4>[   11.278552]  do_one_initcall+0x58/0x2e0
<4>[   11.278554]  ? do_init_module+0x1d/0x1ea
<4>[   11.278558]  ? rcu_read_lock_sched_held+0x6f/0x80
<4>[   11.278560]  ? kmem_cache_alloc_trace+0x261/0x290
<4>[   11.278564]  do_init_module+0x56/0x1ea
<4>[   11.278566]  load_module+0x2701/0x29e0
<4>[   11.278578]  ? __se_sys_finit_module+0xd3/0xf0
<4>[   11.278579]  __se_sys_finit_module+0xd3/0xf0
<4>[   11.278587]  do_syscall_64+0x55/0x190
<4>[   11.278590]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4>[   11.278591] RIP: 0033:0x7fba9bc27839
<4>[   11.278593] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 1f f6 2c 00 f7 d8 64 89 01 48
<4>[   11.278595] RSP: 002b:00007ffe4fa44e48 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
<4>[   11.278597] RAX: ffffffffffffffda RBX: 00005612fca7f410 RCX: 00007fba9bc27839
<4>[   11.278598] RDX: 0000000000000000 RSI: 00007fba9b906145 RDI: 000000000000000f
<4>[   11.278599] RBP: 00007fba9b906145 R08: 0000000000000000 R09: 00007ffe4fa44f60
<4>[   11.278600] R10: 000000000000000f R11: 0000000000000246 R12: 0000000000000000
<4>[   11.278602] R13: 00005612fca745d0 R14: 0000000000020000 R15: 00005612fca7f410
<4>[   11.278608] irq event stamp: 471718
<4>[   11.278612] hardirqs last  enabled at (471717): [<ffffffff811269c4>] vprintk_emit+0x124/0x320
<4>[   11.278614] hardirqs last disabled at (471718): [<ffffffff810019b0>] trace_hardirqs_off_thunk+0x1a/0x1c
<4>[   11.278615] softirqs last  enabled at (471322): [<ffffffff81c0033a>] __do_softirq+0x33a/0x4b9
<4>[   11.278618] softirqs last disabled at (471315): [<ffffffff810b5519>] irq_exit+0xa9/0xc0
<4>[   11.278655] WARNING: CPU: 7 PID: 367 at drivers/gpu/drm/i915/intel_dp.c:5234 intel_digital_port_connected+0x5e4/0x710 [i915]
<4>[   11.278656] ---[ end trace f564763a4e23c326 ]---
Comment 1 Martin Peres 2019-05-02 06:58:20 UTC
Oops, forgot the link: https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6024/fi-icl-u2/boot0.log
Comment 2 Jani Saarinen 2019-05-06 10:16:54 UTC
Thius was merged to get rid off failure:https://patchwork.freedesktop.org/patch/303020/?series=60197&rev=1
Comment 3 Arek Hiler 2019-05-06 10:20:35 UTC
We have got a temporary WA in (which may stay...), the proper fix would to get updated, correct VBT.

Anyway, this solves the issue and is merged and we see CI_DRM_ runs being healthy now. Closing as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.